# akaris-ng

./: .gitignore  SConstruct  configure.ac  readme
disk/: Makefile  source.img
disk/mountpoint/: kernel.k
servers/: i686.mk  link.ld  rules.mk
servers/test1/: Makefile  test1  test1.c
sys/: Makefile  Makefile.am  SConstruct  rules.mk
sys/common/: Makefile  address_space.c  buddy.c  kernel.c  mutex.c  physmem.c  scheduler.c  slab.c  thread.c  virtmem.c
sys/i386/: Makefile.am
sys/i386/physmem/: physmem.c  physmem.h
sys/i686/: Makefile  bootvideo.c  bootvideo.h  headers.c  i686.c  i686_address_space.c  i686_address_space.h  i686_cpu.c  i686_cpu.h  i686_io.h  i686_physmem.c  i686_physmem.h  i686_slab.c  i686_slab.h  i686_tty.c  i686_tty.h  i686_virtmem.c  i686_virtmem.c.orig  i686_virtmem.h  mutex.c  physmem.c  physmem.h  stacksmash.c  stacksmash.h  start.c
sys/i686/compile/: Makefile
sys/i686/loader/: headers.c  loader.c  test.c
sys/include/: abi_elf.h  address_space.h  assert.h  buddy.h  config.h  cpu.h  elf.h  kernel.h  math.h  multiboot.h  mutex.h  physical_memory.h  queue.h  scheduler.h  slab.h  strfuncs.h  sysconf.h  thread.h  types.h  virtual_memory.h
sys/lib/: Makefile  Makefile.am  elf.c  queue.h  strfuncs.c  strfuncs.h  strlcat.c  strlcpy.c
sys/scripts/: i686.ld  loader-i686.ld
sys/test/: mock.c  mock.h  physmem.c  physmem.h  start.c  test.c  test.h  test_address_space.c  test_address_space.h  test_elf.c  test_elf.h  test_physmem.c  test_physmem.h  test_slab.c  test_slab.h  test_start.c  test_vmem.c  test_vmem.h
(+5 files in other folders)
